frist paper version